force-app/main/default/objects/Account/fields/AbilityToPay__c.field-meta.xml
<CustomField>
    <fullName>AbilityToPay__c</fullName>
    <label>Ability to Pay</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comfortable with private-pay services</fullName>
            </value>
            <value>
                <fullName>Needs to check with family / unclear</fullName>
            </value>
            <value>
                <fullName>Not currently able to pay private-pay</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>