force-app/main/default/objects/Account/fields/Address_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Address_Prospect__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>