force-app/main/default/objects/Account/fields/ApartmentHome__c.field-meta.xml
<CustomField>
    <fullName>ApartmentHome__c</fullName>
    <label>Apartment/home</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>WhereDoesTheClientLive__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Lives alone</fullName>
            </value>
            <value>
                <fullName>Lives with spouse/family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>