force-app/main/default/objects/Account/fields/AssessmentCompletedStageDate__c.field-meta.xml
<CustomField>
    <fullName>AssessmentCompletedStageDate__c</fullName>
    <label>Assessment Completed Stage Date</label>
    <type>Date</type>
</CustomField>