force-app/main/default/objects/Account/fields/AssessmentScheduledStageDate__c.field-meta.xml
<CustomField>
    <fullName>AssessmentScheduledStageDate__c</fullName>
    <label>Assessment Scheduled Stage Date</label>
    <type>Date</type>
</CustomField>