force-app/main/default/objects/Account/fields/Assisted_Living__c.field-meta.xml
<CustomField>
    <fullName>Assisted_Living__c</fullName>
    <label>Assisted Living</label>
    <length>80</length>
    <type>Text</type>
</CustomField>