force-app/main/default/objects/Account/fields/Attends_Services__c.field-meta.xml
<CustomField>
    <fullName>Attends_Services__c</fullName>
    <label>Attends Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Attends_Services</valueSetName>
    </valueSet>
</CustomField>