force-app/main/default/objects/Account/fields/Auto_Clock_in__c.field-meta.xml
<CustomField>
    <fullName>Auto_Clock_in__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Auto Clock-In is enabled, WellSky Personal Care will automatically clock the caregiver in at the scheduled start time. During the shift, the care giver will be able to update tasks, complete forms, report mileage and record general comments.</inlineHelpText>
    <label>Auto Clock-in</label>
    <type>Checkbox</type>
</CustomField>