force-app/main/default/objects/Account/fields/Auto_Clock_out__c.field-meta.xml
<CustomField>
    <fullName>Auto_Clock_out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this option is enabled, alerts will be turned off and WellSky Personal Care will automatically clock the caregiver in and out for each shift for this client and set the status of the resulting care log to the status you specify here. The caregiver will be able to call in during the shift to update tasks, report mileage, and record general comments but will not be permitted to clock in or out.</inlineHelpText>
    <label>Auto Clock-out</label>
    <type>Checkbox</type>
</CustomField>