force-app/main/default/objects/Account/fields/Business_Stage__c.field-meta.xml
<CustomField>
    <fullName>Business_Stage__c</fullName>
    <label>Business Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Identify</fullName>
            </value>
            <value>
                <fullName>Meet</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>1st Referral</fullName>
            </value>
            <value>
                <fullName>Referrals 2-3 within 30 days</fullName>
            </value>
            <value>
                <fullName>Referrals 4-8 within 90 days</fullName>
            </value>
            <value>
                <fullName>Active Referral Source</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
                <isActive>false</isActive>
                <label>Closed Lost</label>
            </value>
            <value>
                <fullName>Follow Up</fullName>
                <isActive>false</isActive>
                <label>Follow Up</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Negotiation</fullName>
                <isActive>false</isActive>
                <label>Negotiation</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>