force-app/main/default/objects/Account/fields/Business_Stage_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Stage_Last_Updated_Date__c</fullName>
    <label>Business Stage Last Updated Date</label>
    <type>DateTime</type>
</CustomField>