force-app/main/default/objects/Account/fields/City_Prospect__c.field-meta.xml
<CustomField>
    <fullName>City_Prospect__c</fullName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>