force-app/main/default/objects/Account/fields/ClientDate__c.field-meta.xml
<CustomField>
    <fullName>ClientDate__c</fullName>
    <label>Client Date</label>
    <type>Date</type>
</CustomField>