force-app/main/default/objects/Account/fields/Cost_Comfort_Level__c.field-meta.xml
<CustomField>
    <fullName>Cost_Comfort_Level__c</fullName>
    <label>Cost Comfort Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cost_Comfort_Level</valueSetName>
    </valueSet>
</CustomField>