force-app/main/default/objects/Account/fields/Current_support_in_place__c.field-meta.xml
<CustomField>
    <fullName>Current_support_in_place__c</fullName>
    <label>Current support in place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_support_in_place</valueSetName>
    </valueSet>
</CustomField>