force-app/main/default/objects/Account/fields/Decision_Maker_Email__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Email__c</fullName>
    <label>Decision Maker Email</label>
    <type>Email</type>
</CustomField>