force-app/main/default/objects/Account/fields/Decision_Maker_Name__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Name__c</fullName>
    <label>Decision Maker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>