force-app/main/default/objects/Account/fields/Decison_Maker_Phone__c.field-meta.xml
<CustomField>
    <fullName>Decison_Maker_Phone__c</fullName>
    <label>Decison Maker Phone</label>
    <type>Phone</type>
</CustomField>