force-app/main/default/objects/Account/fields/Desired_Support_Services_Requested__c.field-meta.xml
<CustomField>
    <fullName>Desired_Support_Services_Requested__c</fullName>
    <label>Desired Support / Services Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Desired_Support_Services_Requested</valueSetName>
    </valueSet>
</CustomField>