force-app/main/default/objects/Account/fields/Disable_Missed_Clock_in_out_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Disable_Missed_Clock_in_out_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mute all missed clock in and clock out alerts for shifts with this Client.</inlineHelpText>
    <label>Disable Missed Clock-in/out Alerts</label>
    <type>Checkbox</type>
</CustomField>