force-app/main/default/objects/Account/fields/Disposition_Notes__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Notes__c</fullName>
    <label>Disposition Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>