force-app/main/default/objects/Account/fields/DNR__c.field-meta.xml
<CustomField>
    <fullName>DNR__c</fullName>
    <label>DNR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DNR</valueSetName>
    </valueSet>
</CustomField>