force-app/main/default/objects/Account/fields/Duration_of_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Concerns__c</fullName>
    <label>Duration of Concerns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Duration_of_Concerns</valueSetName>
    </valueSet>
</CustomField>