force-app/main/default/objects/Account/fields/Email_change_in_Condition_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Email_change_in_Condition_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disable Missed Clock-in/out Alerts.</inlineHelpText>
    <label>Email change in Condition Reporting</label>
    <type>Checkbox</type>
</CustomField>