force-app/main/default/objects/Account/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <label>External ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>