force-app/main/default/objects/Account/fields/Geo_fence_Radius_for_Clock_ins_and_Clock__c.field-meta.xml
<CustomField>
    <fullName>Geo_fence_Radius_for_Clock_ins_and_Clock__c</fullName>
    <label>Geo-fence Radius for Clock-ins and Clock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>