force-app/main/default/objects/Account/fields/Home_Phones__c.field-meta.xml
<CustomField>
    <fullName>Home_Phones__c</fullName>
    <label>Personal Phone</label>
    <type>Phone</type>
</CustomField>