force-app/main/default/objects/Account/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <label>Hospital</label>
    <length>80</length>
    <type>Text</type>
</CustomField>