force-app/main/default/objects/Account/fields/How_did_you_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_us__c</fullName>
    <label>How did you hear about us?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Search</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Display Ad</fullName>
            </value>
            <value>
                <fullName>Print Ad</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>