force-app/main/default/objects/Account/fields/HowDidYouFindUs__c.field-meta.xml
<CustomField>
    <fullName>HowDidYouFindUs__c</fullName>
    <label>How did you find us?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Referral Source</fullName>
            </value>
            <value>
                <fullName>WellSpring outreach</fullName>
            </value>
            <value>
                <fullName>Self-Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>