force-app/main/default/objects/Account/fields/HowToSubmitClaims__c.field-meta.xml
<CustomField>
    <fullName>HowToSubmitClaims__c</fullName>
    <label>How to submit claims</label>
    <length>255</length>
    <type>Text</type>
</CustomField>