force-app/main/default/objects/Account/fields/Independent_Living_Community__c.field-meta.xml
<CustomField>
    <fullName>Independent_Living_Community__c</fullName>
    <label>Independent Living Community</label>
    <length>80</length>
    <type>Text</type>
</CustomField>