force-app/main/default/objects/Account/fields/Intake_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Intake_Disposition__c</fullName>
    <label>Intake Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Intake_Disposition</valueSetName>
    </valueSet>
</CustomField>