force-app/main/default/objects/Account/fields/Intake_Stage__c.field-meta.xml
<CustomField>
    <fullName>Intake_Stage__c</fullName>
    <label>Intake Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral Received</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>