force-app/main/default/objects/Account/fields/Internal_note__c.field-meta.xml
<CustomField>
    <fullName>Internal_note__c</fullName>
    <label>Internal note</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>