force-app/main/default/objects/Account/fields/Is_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Is_Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked automatically when an Account Deactivation record is created. Triggers a permanent record lock via AccountTrigger.</description>
    <label>Is Deactivated</label>
    <type>Checkbox</type>
</CustomField>