force-app/main/default/objects/Account/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Couple Household Account ?</label>
    <type>Checkbox</type>
</CustomField>