force-app/main/default/objects/Account/fields/Lead_Priority__c.field-meta.xml
<CustomField>
    <fullName>Lead_Priority__c</fullName>
    <label>Lead Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High — clear fit, high urgency</fullName>
            </value>
            <value>
                <fullName>Medium — fit but early stage</fullName>
            </value>
            <value>
                <fullName>Low — unclear fit or long timeline</fullName>
            </value>
            <value>
                <fullName>High — clear fit, high urgency, ready to buy</fullName>
                <isActive>false</isActive>
                <label>High — clear fit, high urgency, ready to buy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>