force-app/main/default/objects/Account/fields/Lives__c.field-meta.xml
<CustomField>
    <fullName>Lives__c</fullName>
    <label>Lives</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lives</valueSetName>
    </valueSet>
</CustomField>