force-app/main/default/objects/Account/fields/Lives_with__c.field-meta.xml
<CustomField>
    <fullName>Lives_with__c</fullName>
    <label>Lives with</label>
    <length>255</length>
    <type>Text</type>
</CustomField>