force-app/main/default/objects/Account/fields/Location_g__c.field-meta.xml
<CustomField>
    <fullName>Location_g__c</fullName>
    <inlineHelpText>Please ensure the Selected location value spelling is correct.</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WellSky_Location</valueSetName>
    </valueSet>
</CustomField>