force-app/main/default/objects/Account/fields/Long_term_care_insurance__c.field-meta.xml
<CustomField>
    <fullName>Long_term_care_insurance__c</fullName>
    <label>Long-term care insurance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Long_term_care_insurance</valueSetName>
    </valueSet>
</CustomField>