force-app/main/default/objects/Account/fields/Memory_Care__c.field-meta.xml
<CustomField>
    <fullName>Memory_Care__c</fullName>
    <label>Memory Care</label>
    <length>80</length>
    <type>Text</type>
</CustomField>