force-app/main/default/objects/Account/fields/Name_Of_Company__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Company__c</fullName>
    <label>Name Of Company</label>
    <length>30</length>
    <type>Text</type>
</CustomField>