force-app/main/default/objects/Account/fields/NewInquiryDate__c.field-meta.xml
<CustomField>
    <fullName>NewInquiryDate__c</fullName>
    <label>New Inquiry Date</label>
    <type>Date</type>
</CustomField>