force-app/main/default/objects/Account/fields/No_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>No_Middle_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Middle Name</label>
    <type>Checkbox</type>
</CustomField>