force-app/main/default/objects/Account/fields/Not_a_fit_Deactivate__c.field-meta.xml
<CustomField>
    <fullName>Not_a_fit_Deactivate__c</fullName>
    <label>Not a fit - Deactivate</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Intake_Disposition__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Hospice</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Family asked to remove from list — cost</fullName>
            </value>
            <value>
                <fullName>Outside current service geography</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>