force-app/main/default/objects/Account/fields/NotAFitFutureOutreach__c.field-meta.xml
<CustomField>
    <fullName>NotAFitFutureOutreach__c</fullName>
    <label>Not a fit - Future outreach</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Intake_Disposition__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Needs exceed level of clinical intensity we provide</fullName>
            </value>
            <value>
                <fullName>Requires services we do not offer</fullName>
            </value>
            <value>
                <fullName>Cannot currently afford</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>