force-app/main/default/objects/Account/fields/Number_Of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Hours__c</fullName>
    <label>Number Of Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>