force-app/main/default/objects/Account/fields/OnHoldListNotAFitRightNow__c.field-meta.xml
<CustomField>
    <fullName>OnHoldListNotAFitRightNow__c</fullName>
    <label>On Hold List - Not a fit right now</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Qualified_Prospect_fits_WellSpring__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Family interested, Client not ready</fullName>
            </value>
            <value>
                <fullName>Family not ready</fullName>
            </value>
            <value>
                <fullName>Future planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>