force-app/main/default/objects/Account/fields/Other_Desired_Support__c.field-meta.xml
<CustomField>
    <fullName>Other_Desired_Support__c</fullName>
    <label>Description for Support/Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>