force-app/main/default/objects/Account/fields/Other_Reason_for_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_for_Inquiry__c</fullName>
    <label>Description for Reason for Inquiry</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>