force-app/main/default/objects/Account/fields/Other_WhereDoesTheClientLive__c.field-meta.xml
<CustomField>
    <fullName>Other_WhereDoesTheClientLive__c</fullName>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>