force-app/main/default/objects/Account/fields/OutreachInprogressDate__c.field-meta.xml
<CustomField>
    <fullName>OutreachInprogressDate__c</fullName>
    <label>Outreach Inprogress Date</label>
    <type>Date</type>
</CustomField>