force-app/main/default/objects/Account/fields/Overall_Fit_with_WellSpring_Services__c.field-meta.xml
<CustomField>
    <fullName>Overall_Fit_with_WellSpring_Services__c</fullName>
    <label>Overall Fit with WellSpring Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes — within WellSpring scope and geography</fullName>
            </value>
            <value>
                <fullName>Not at this time — temporary limitation</fullName>
            </value>
            <value>
                <fullName>No — outside WellSpring scope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>