force-app/main/default/objects/Account/fields/Primary_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Primary_Decision_Maker__c</fullName>
    <label>Primary Decision Maker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Decision_Maker</valueSetName>
    </valueSet>
</CustomField>