force-app/main/default/objects/Account/fields/Profile_Tags__c.field-meta.xml
<CustomField>
    <fullName>Profile_Tags__c</fullName>
    <label>Profile_Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Milwaukee</fullName>
            </value>
            <value>
                <fullName>Assisted Living Community</fullName>
            </value>
            <value>
                <fullName>In-Home Hired Caregiving</fullName>
            </value>
            <value>
                <fullName>Independent Living Community</fullName>
            </value>
            <value>
                <fullName>Lives in Own Home/Apartment</fullName>
            </value>
            <value>
                <fullName>Long Term Care Insurance</fullName>
            </value>
            <value>
                <fullName>Memory Care Facility</fullName>
            </value>
            <value>
                <fullName>POA Activated</fullName>
            </value>
            <value>
                <fullName>Cincinnati</fullName>
                <isActive>false</isActive>
                <label>Cincinnati</label>
            </value>
            <value>
                <fullName>Detroit</fullName>
                <isActive>false</isActive>
                <label>Detroit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>