force-app/main/default/objects/Account/fields/Prospect_Source__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Source__c</fullName>
    <label>Prospect Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Walk-In</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>