force-app/main/default/objects/Account/fields/ProspectDate__c.field-meta.xml
<CustomField>
    <fullName>ProspectDate__c</fullName>
    <label>Prospect Date</label>
    <type>Date</type>
</CustomField>