force-app/main/default/objects/Account/fields/QB_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Customer_ID__c</fullName>
    <externalId>true</externalId>
    <label>QB Customer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>