force-app/main/default/objects/Account/fields/Qualified_Prospect_fits_WellSpring__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Prospect_fits_WellSpring__c</fullName>
    <label>Qualified Prospect — fits WellSpring</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Intake_Disposition__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Schedule assessment</fullName>
            </value>
            <value>
                <fullName>Needs follow-up</fullName>
            </value>
            <value>
                <fullName>On Hold List - Not a fit right now but could be in the future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>