force-app/main/default/objects/Account/fields/Readiness_Stage__c.field-meta.xml
<CustomField>
    <fullName>Readiness_Stage__c</fullName>
    <label>Readiness Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Readiness_Stage</valueSetName>
    </valueSet>
</CustomField>