force-app/main/default/objects/Account/fields/Reason_for_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Inquiry__c</fullName>
    <label>Reason for Inquiry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reason_for_Inquiry</valueSetName>
    </valueSet>
</CustomField>