force-app/main/default/objects/Account/fields/Reason_For_Not_Conducting_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Not_Conducting_Assessment__c</fullName>
    <label>Reason For Not Conducting Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>