force-app/main/default/objects/Account/fields/Reason_s__c.field-meta.xml
<CustomField>
    <fullName>Reason_s__c</fullName>
    <label>Reason&apos;s</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Overall_Fit_with_WellSpring_Services__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outside current service geography</fullName>
            </value>
            <value>
                <fullName>Needs exceed level of clinical intensity we provide</fullName>
            </value>
            <value>
                <fullName>Requires services we do not offer</fullName>
            </value>
            <value>
                <fullName>Financial mismatch</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>