force-app/main/default/objects/Account/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <label>Referral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Care Agency</fullName>
            </value>
            <value>
                <fullName>Assisted Living</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Homecare</fullName>
                <isActive>false</isActive>
                <label>Homecare</label>
            </value>
            <value>
                <fullName>Senior Living</fullName>
                <isActive>false</isActive>
                <label>Senior Living</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>