force-app/main/default/objects/Account/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <label>Referrer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>