force-app/main/default/objects/Account/fields/Rehab_SNF__c.field-meta.xml
<CustomField>
    <fullName>Rehab_SNF__c</fullName>
    <label>Rehab/SNF</label>
    <length>80</length>
    <type>Text</type>
</CustomField>